--- a/src/static/suit-ckeditor/ckeditor/plugins/pagephotos/styles/editor.css
+++ b/src/static/suit-ckeditor/ckeditor/plugins/pagephotos/styles/editor.css
@@ -13,8 +13,9 @@
 }
 
 .multi-image img {
-    width: 140px;
+    width: auto;
     height: auto;
+    max-width: 140px;
     max-height: 140px;
     margin: 1px 3px 1px 2px;
     box-shadow: 1px 1px 3px #808080;
