non-require request for menu

--- a/src/static/scss/_base_menu.scss
+++ b/src/static/scss/_base_menu.scss
@@ -32,12 +32,8 @@
       }
     }
 
-    &.active {
+    &.active a {
       color: map-get($conf, 'active');
-
-      a:hover {
-        color: map-get($conf, 'active');
-      }
     }
   }
 }
