--- a/src/apps_common/seo/templates/seo/block.html
+++ b/src/apps_common/seo/templates/seo/block.html
@@ -7,7 +7,7 @@
     {% endif %}
 
     <div class="text text-styles">
-      {{ seo.text|paragraphs|typograf|safe }}
+      {{ seo.text|linewraps|typograf|safe }}
     </div>
   </div>
 </div>
