--- a/src/apps_common/menu/static/menu/scss/main_menu.scss
+++ b/src/apps_common/menu/static/menu/scss/main_menu.scss
@@ -99,7 +99,7 @@ $mobile_active_color: $menu_active_color;
     }
   }
 
-  @at-root .main-menu-opened &
+  @at-root .main-menu-opened & {
     right: 0;
   }
 }
@@ -144,7 +144,7 @@ $mobile_active_color: $menu_active_color;
     @include transition-delay(0s, 0s, 0.45s);
   }
 
-  @at-root .main-menu-opened &
+  @at-root .main-menu-opened & {
     &:before {
       top: 50%;
       @include box-shadow(transparent 0 0 0 0);
