--- a/src/static/scss/forms.scss
+++ b/src/static/scss/forms.scss
@@ -13,6 +13,7 @@ textarea, select {
   max-width: 100%;
   padding: 5px 6px;
   border: 1px solid #808080;
+  @include border-box;
   @include font_default;
   @include fontsize_default;
   @include border_radius(4px);
