--- a/src/static/admin/scss/admin_fixes.scss
+++ b/src/static/admin/scss/admin_fixes.scss
@@ -183,6 +183,23 @@ td, th {
   overflow: hidden !important;
 }
 
+// украшение диалогов CKEditor
+.cke_dialog {
+  .cke_dialog_contents_body {
+    padding: 5px 10px;
+  }
+
+  .cke_dialog_ui_labeled_label {
+    display: inline-block;
+    margin-bottom: 4px;
+  }
+
+  .cke_dialog_ui_input_textarea {
+    width: 100%;
+    height: 10em;
+    white-space: normal;
+  }
+}
 
 // правка отступа между действиями и списком
 .actions {
