--- a/src/static/scss/text_styles.scss
+++ b/src/static/scss/text_styles.scss
@@ -20,10 +20,7 @@
     text-decoration: underline;
 
     &:hover {
-      text-decoration: none;
-    }
-    &:active {
-      color: red;
+      @include opacity(0.75);
     }
   }
 
