--- a/src/static/scss/text_styles.scss
+++ b/src/static/scss/text_styles.scss
@@ -191,6 +191,38 @@
     }
   }
 
+  // две колонки
+  $text_columns_gap: 40px;
+  $text_columns_media: $media1024;
+  .columns {
+    @include media_interval($text_columns_media, 0) {
+      margin: 1.6em 0;
+      @include flexbox;
+    }
+
+    .column {
+      @include media_interval($text_columns_media, 0) {
+        max-width: calc(50% - #{$text_columns_gap});
+        min-height: 1em;
+        @include flex(1 0 0);
+
+        & > *:first-child {
+          margin-top: 0;
+        }
+
+        > *:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    .column-left {
+      @include media_interval($text_columns_media, 0) {
+        margin-right: $text_columns_gap;
+      }
+    }
+  }
+
   .no-margin {
     margin-bottom: 0;
 
