--- a/src/static/scss/text_styles.scss
+++ b/src/static/scss/text_styles.scss
@@ -192,19 +192,16 @@
   }
 
   // две колонки
-  $text_columns_gap: 40px;
-  $text_columns_media: $media1024;
   .columns {
-    @include media_interval($text_columns_media, 0) {
+    @include media_interval($media900, 0) {
       margin: 1.6em 0;
       @include flexbox;
     }
 
     .column {
-      @include media_interval($text_columns_media, 0) {
-        max-width: calc(50% - #{$text_columns_gap});
+      @include media_interval($media900, 0) {
         min-height: 1em;
-        @include flex(1 0 0);
+        @include flex(1 1 auto);
 
         & > *:first-child {
           margin-top: 0;
@@ -214,11 +211,21 @@
           margin-bottom: 0;
         }
       }
+
+      @include media_interval($media1200, 0) {
+        max-width: calc(50% - 25px);
+      }
+      @include media_interval($media900, $media1200) {
+        max-width: calc(50% - 20px);
+      }
     }
 
     .column-left {
-      @include media_interval($text_columns_media, 0) {
-        margin-right: $text_columns_gap;
+      @include media_interval($media1200, 0) {
+        margin-right: 50px;
+      }
+      @include media_interval($media900, $media1200) {
+        margin-right: 40px;
       }
     }
   }
