--- a/src/static/scss/text_styles.scss
+++ b/src/static/scss/text_styles.scss
@@ -84,6 +84,12 @@
     }
   }
 
+  ul ul > li:before {
+    content: '—';
+    top: 0;
+    @include transform(none);
+  }
+
   ol {
     padding-left: 1.6em;
     list-style: decimal;
