--- a/src/static/admin/scss/admin_fixes.scss
+++ b/src/static/admin/scss/admin_fixes.scss
@@ -306,6 +306,10 @@ label {
   min-width: 100px;
 }
 
+.form-horizontal .inline-related h3 a {
+  margin-left: 20px;
+}
+
 .form-horizontal .inline-related h3 b {
   min-width: 130px;
 }
