--- a/src/static/scss/mixins/crossbrowser/_box_sizing.scss
+++ b/src/static/scss/mixins/crossbrowser/_box_sizing.scss
@@ -1,10 +1,6 @@
 // Пример: @include box_sizing(border-box);
-@mixin box_sizing($args...) {
+@mixin box-sizing($args...) {
   -webkit-box-sizing: $args;
   -moz-box-sizing: $args;
   box-sizing: $args;
-}
-
-@mixin border-box() {
-  @include box_sizing(border-box);
 }
