--- a/src/static/scss/mixins/crossbrowser/_gradient.scss
+++ b/src/static/scss/mixins/crossbrowser/_gradient.scss
@@ -7,7 +7,7 @@
   @return $is-keyword or $is-angle;
 }
 
-@function legacy-direction($value) {
+@function legacy-gradient-direction($value) {
   @if is-direction($value) == false {
     @error "Cannot convert `#{$value}` to legacy syntax because it doesn't seem to be a direction.";
   }
@@ -31,12 +31,12 @@
 }
 
 @mixin linear-gradient($direction, $color-stops...) {
-  background-image: -webkit-linear-gradient(legacy-direction($direction), $color-stops);
+  background-image: -webkit-linear-gradient(legacy-gradient-direction($direction), $color-stops);
   background-image: linear-gradient($direction, $color-stops);
 }
 
 @mixin repeating-linear-gradient($direction, $color-stops...) {
-  background-image: -webkit-repeating-linear-gradient(legacy-direction($direction), $color-stops);
+  background-image: -webkit-repeating-linear-gradient(legacy-gradient-direction($direction), $color-stops);
   background-image: repeating-linear-gradient($direction, $color-stops);
 }
 
