--- a/src/static/scss/mixins/_all.scss
+++ b/src/static/scss/mixins/_all.scss
@@ -2,8 +2,10 @@
 @import "crossbrowser/all";
 
 @import "border_box";
+@import "centrize_image";
 @import "clearfix";
 @import "font_size";
+@import "flex_columns";
 @import "media";
 @import "padding";
 @import "placeholder";
