--- a/src/templates/admin/base_site.html
+++ b/src/templates/admin/base_site.html
@@ -10,7 +10,7 @@
     docElement.setAttribute('google-apikey', '{{ GOOGLE_APIKEY }}');
   </script>
   <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.png' %}"/>
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic" rel="stylesheet"
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic" rel="stylesheet"
         type="text/css">
   <link href="{% static 'admin/css/customize.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
