--- a/src/static/scss/_conf.scss
+++ b/src/static/scss/_conf.scss
@@ -44,7 +44,7 @@ $grid_full_paddings: ();
 //=======================
 // Sprite
 //=======================
-$sprite_url: url(/static/img/sprite_a.svg);
+$sprite_url: url(/static/img/sprite.svg);
 $sprite_width: 300px;
 $sprite_height: 106px;
 
