--- a/src/static/scss/popups/popups.scss
+++ b/src/static/scss/popups/popups.scss
@@ -25,7 +25,7 @@ $content_paddings: (
 );
 
 // цвет фона
-$background_color: #C0C0C0;
+$background_color: $white;
 
 // кнопка закрытия
 $close_btn_size: 21px;
