--- a/src/apps/shop/templates/shop/admin/products.html
+++ b/src/apps/shop/templates/shop/admin/products.html
@@ -17,7 +17,7 @@
       {% for order_product in entity.records.all %}
         <tr>
           <td style="text-align: center">
-            <img src="{{ order_product.product.photo.small.url }}">
+            <img src="{{ order_product.product.photo.admin.url }}">
           </td>
           <td>
             <a href="{% url 'admin:shop_shopproduct_change' order_product.product.pk %}"
