--- a/src/apps_common/menu/static/menu/scss/main_menu.scss
+++ b/src/apps_common/menu/static/menu/scss/main_menu.scss
@@ -35,7 +35,7 @@ $mobile_active_color: $menu_active_color;
       }
     }
 
-    &.active a {
+    &.active > a {
       color: $menu_active_color;
     }
   }
