--- a/src/apps/contacts/templates/contacts/mails/message.html
+++ b/src/apps/contacts/templates/contacts/mails/message.html
@@ -18,9 +18,9 @@
 {% endif %}
 
 {% if message.referer %}
-  <p><b>From page:</b> <a href="{{ message.referer }}" target="_blank">{{ message.referer }}</a></p>
+  <p><b>{% trans 'From page' %}:</b> <a href="{{ message.referer }}" target="_blank">{{ message.referer }}</a></p>
 {% endif %}
 
 {% if request.COOKIES.utm %}
-  <p><b>UTM:</b> {{ request.COOKIES.utm }}</p>
+  <p><b>{% trans 'UTM' %}:</b> {{ request.COOKIES.utm }}</p>
 {% endif %}
