--- a/src/apps/search/templates/search/search.html
+++ b/src/apps/search/templates/search/search.html
@@ -4,7 +4,7 @@
 
 <form method="get" action=".">
   <input type="search" name="q" value="{{ query|default:'' }}">
-  <input type="submit" value="{% trans 'Search' %}">
+  <button type="submit" class="btn">{% trans 'Search' %}</button>
 </form>
 
 
