--- a/src/static/admin/scss/dl_core.scss
+++ b/src/static/admin/scss/dl_core.scss
@@ -247,7 +247,7 @@ $footer_1col: $media480;
   }
 
   &.btn-mini {
-    padding: 2px 10px 3px;
+    padding: 4px 10px;
     @include font-size(12px);
     @include border_radius(5px);
 
