--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -14,13 +14,15 @@
 {% block content %}
 
   <div id="error" class="grid-block block">
-    <div class="block-name title-h1">404</div>
+    <div class="block-name title-h1">{% block code %}404{% endblock code %}</div>
     <div class="text text-styles">
-      {% blocktrans %}
-        The page you are looking for no longer exists.<br>
-        Perhaps you can return back to the site’s <a href="/">homepage</a> and see if you can find what you are
-        looking for.
-      {% endblocktrans %}
+      {% block text %}
+        {% blocktrans %}
+          The page you are looking for no longer exists.<br>
+          Perhaps you can return back to the site’s <a href="/">homepage</a> and see if you can find what you are
+          looking for.
+        {% endblocktrans %}
+      {% endblock text %}
     </div>
   </div>
 
