--- a/src/static/scss/mixins/_flex_columns.scss
+++ b/src/static/scss/mixins/_flex_columns.scss
@@ -16,7 +16,8 @@
 
   $min_width: 100% / ($columns + 1);
   $max_width: 100% / $columns;
-  @include flex(1 0 #{($min_width + $max_width) / 2});
+  $basis: min($min_width + 0.5%, ($min_width + $max_width) / 2);
+  @include flex(1 0 $basis);
 
   @if ($margin-right) {
     margin-right: $margin-right;
