--- a/src/apps_common/menu/templates/menu/menu.html
+++ b/src/apps_common/menu/templates/menu/menu.html
@@ -1,4 +1,4 @@
-<ul itemscope itemtype="http://schema.org/SiteNavigationElement">
+<ul {% if level == 1 %}itemscope itemtype="http://schema.org/SiteNavigationElement"{% endif %}>
   {% for item in items %}
     <li class="{% if item.is_active %}active{% endif %}">
       <a href="{{ item.url }}" class="{{ item.classes }}" {{ item.attrs }} itemprop="url">
@@ -6,7 +6,7 @@
       </a>
 
       {% if item.childs %}
-        {% include 'menu/menu.html' with items=item.childs %}
+        {% include 'menu/menu.html' with items=item.childs level=level+1 %}
       {% endif %}
     </li>
   {% endfor %}
